# ProjectManager

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/include/: directory.h  flib.h  globals.h
app/src/: directory.cpp  flib.cpp  globals.cpp
app/templates/cmake_project/: _config.dc  check.py  config.yaml
